fix: remove join constraints that block spaces on Continue, add configurable overlap
- buildContinueJoinPlaceholder() now returns '' — the overlap end equals
  the natural message end so no regex constraint is needed after it.
  Fixes "Thesweet" instead of "The sweet" when continuing short messages.
- Added "Overlap # of characters for Continue" setting (0-120, default 14)
  in the Advanced section.

--- a/settings.html
+++ b/settings.html
@@ -34,6 +34,11 @@
                     <label for="structuredprefill_newline_token">Newline token (encoded in schema)</label>
                     <input id="structuredprefill_newline_token" class="text_pole" type="text" autocomplete="off" placeholder="&lt;NL&gt;">
                 </div>
+
+                <div class="flex-container flexFlowColumn">
+                    <label for="structuredprefill_continue_overlap_chars">Overlap # of characters for Continue</label>
+                    <input id="structuredprefill_continue_overlap_chars" class="text_pole" type="number" min="0" max="120" step="1" autocomplete="off">
+                </div>
             </div>
 
         </div>
