--- a/settings.html
+++ b/settings.html
@@ -39,6 +39,11 @@
                     <label for="structuredprefill_continue_overlap_chars">Overlap # of characters for Continue</label>
                     <input id="structuredprefill_continue_overlap_chars" class="text_pole" type="number" min="0" max="120" step="1" autocomplete="off">
                 </div>
+
+                <div class="flex-container flexFlowColumn">
+                    <label for="structuredprefill_anti_slop_ban_list">Anti-Slop — Banned words (one per line)</label>
+                    <textarea id="structuredprefill_anti_slop_ban_list" class="text_pole" rows="6" placeholder="ozone&#10;Elara&#10;—" autocomplete="off"></textarea>
+                </div>
             </div>
 
         </div>
